# drf-auth

./: README.md  pyproject.toml
travel_project/: db.sqlite3  requirements.txt
travel_project/travel_project/: settings.py  urls.py
travel_project/travels/: models.py  permissions.py  serializers.py  urls.py  views.py
travel_project/travels/migrations/: 0001_initial.py
